# more-rs-di-axum

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  getting-started.html  index.html  print.html  searcher-09f2665d.js  searchindex-d84dd2f6.js  searchindex.js  searchindex.json  toc-3f088598.js  toc.html
.github/workflows/: ci.yml  deploy.yml
examples/: basic.rs
examples/basic-di/: Cargo.toml
guide/: best_practices.html  book.toml  registration.html  resolution.html
guide/src/: README.md  SUMMARY.md  getting-started.md
guide/src/guide/: best_practices.md  links.md  registration.md  resolution.md
src/: Cargo.toml  build.rs  inject.rs  inject_keyed.rs  lib.rs  test_client.rs
