[package]
name = "more-di-axum"
version = "0.2.0"
edition = "2021"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support dependency injection (DI) for Axum"
keywords = ["more", "di", "dependency", "injection", "axum"]
license = "MIT"
readme = "README.md"
homepage = "https://commonsensesoftware.github.io/more-rs-di-axum/"
repository = "https://github.com/commonsensesoftware/more-rs-di-axum"
include = ["*.rs", "!build.rs", "README.md"]

[lib]
name = "di_axum"
path = "lib.rs"
doctest = false

[dependencies]
axum = "0.7"
more-di = { version = "3.1", features = ["async"] }

[dev-dependencies]
# REF: https://github.com/tokio-rs/axum/blob/main/axum/Cargo.toml#L33
bytes = "1.0"
http = "1.0.0"
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-service = "0.3"

# REF: https://github.com/tokio-rs/axum/blob/main/axum/Cargo.toml#L105
reqwest = { version = "0.11.14", default-features = false, features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { package = "tokio", version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "net", "test-util"] }
