[package]
name = "example-basic-di"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
more-di = { version = "3.1", features = ["async"] }
more-di-axum = { path = "../../src" }
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
mime = "0.3"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }